--- a/src/Ahs/B0bBundle/Resources/views/User/register.html.twig
+++ b/src/Ahs/B0bBundle/Resources/views/User/register.html.twig
@@ -35,13 +35,13 @@
 
 {% form_theme form 'AhsB0bBundle:Form:form_div_layout.html.twig' %}
 
-{% block title %}Registreren ← {{ parent() }}{% endblock %}
+{% block title %}{% trans %}Register{% endtrans %} ← {{ parent() }}{% endblock %}
 
 {% block navigation %}
 <nav>
     <ul>
-        <li><a href="{{ path('ahs_b0b_loginpage') }}">{% trans %}Login{% endtrans %}</a></li>
-        <li><a href="{{ path('ahs_b0b_homepage' ) }}">{% trans %}Home{% endtrans %}</a></li>
+        <li><a href="{{ path('ahs_b0b_login') }}">{% trans %}Login{% endtrans %}</a></li>
+        <li><a href="{{ path('ahs_b0b_home' ) }}">{% trans %}Home{% endtrans %}</a></li>
     </ul>
 </nav>
 {% endblock navigation %}
@@ -51,7 +51,7 @@
 {# Registration Form #}
 {% block content %}
     <section>
-        <form novalidate="novalidate" id="form-register" action="{{ path('ahs_b0b_registerpage') }}" method="post"{{ form_enctype(form) }}>
+        <form novalidate="novalidate" id="form-register" action="{{ path('ahs_b0b_register') }}" method="post"{{ form_enctype(form) }}>
             <fieldset class="box style-a">
                 <legend>{% trans %}Account{% endtrans %}</legend>
                 {# {{ form_widget(form) }} #}
@@ -59,7 +59,7 @@
                     <dd>{{ form_widget(form.givenname ) }}{{ form_errors(form.givenname ) }}</dd>
                     <dd>{{ form_widget(form.familyname) }}{{ form_errors(form.familyname) }}</dd>
                     <dd>{{ form_widget(form.email     ) }}{{ form_errors(form.email     ) }}</dd>
-                    {% for item in form.passwordRaw %}
+                    {% for item in form.password %}
                     <dd>{{ form_widget(item           ) }}{{ form_errors(item           ) }}</dd>
                     {% endfor %}
                 </dl>
