--- a/src/Ahs/B0bBundle/Resources/views/User/login.html.twig
+++ b/src/Ahs/B0bBundle/Resources/views/User/login.html.twig
@@ -61,8 +61,8 @@
                 {% endif %}
                 <legend>{% trans %}Login{% endtrans %}</legend>
                 <dl>
-                    <dd><input type="email" id="login_email" name="email" required="required" placeholder="{% trans %}Email address{% endtrans %}" /></dd>
-                    <dd><input type="password" id="login_password" name="password" required="required" placeholder="{% trans %}Password{% endtrans %}" /></dd>
+                    <dd><input type="email" id="email" name="email" required="required" placeholder="{% trans %}Email address{% endtrans %}" /></dd>
+                    <dd><input type="password" id="password" name="password" required="required" placeholder="{% trans %}Password{% endtrans %}" /></dd>
                     <dd><label class="wrap"><input name="remember" type="checkbox" checked> {% trans %}Remember me{% endtrans %}.</label></dd>
                 </dl>
             </fieldset>
